# star_verification_server

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
.cargo/: config
src/: database.rs  discord.rs  lib.rs  stars.rs
