[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
hex = "0.4.3"
ed25519-dalek = "1.0.1"

[dependencies.uuid]
version = "1.2.2"
features = [
	"v4",
	"fast-rng",
	"js"
]	

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
